@@ -36,7 +36,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 저장 요청 시 리포지토리 호출 및 결과 반환")
-    void register_SUCCESS() throws Exception {
+    void register_SUCCESS() {
         //given
         Food food = FoodFixture.createFood(1L);
         FoodEntity foodEntity = FoodFixture.createFoodEntity(1L);
@@ -50,29 +50,30 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 커서 요청 시 리포지토리 호출 및 리스트 결과 반환")
-    void findFoodList_SUCCESS() throws Exception {
+    void findFoodList_SUCCESS() {
         //given
         Long categoryId = 1L;
         String memberKey = FoodFixture.MEMBER_KEY;
-        LocalDateTime lastCreatedAt = LocalDateTime.now();
-        Cursorable cursorable = new Cursorable(1L,2);
+        long foodId = 1L;
+        Cursorable<Long> cursorable = new Cursorable<>(foodId, 2);
 
-        FoodEntity entity1 = FoodFixture.createFoodEntity(1L);
-        FoodEntity entity2 = FoodFixture.createFoodEntity(2L);
-        List<FoodEntity> foodEntities = List.of(entity1, entity2);
+        List<FoodEntity> foodEntities = List.of(
+                FoodFixture.createFoodEntity(1L),
+                FoodFixture.createFoodEntity(2L));
+        SliceObject<FoodEntity> foodSlice = new SliceObject<>(foodEntities, cursorable, false);
 
-        given(foodRepository.findFoodCursorList(cursorable,categoryId,lastCreatedAt,memberKey)).willReturn(foodEntities);
+        given(foodRepository.findFoodCursorList(cursorable, categoryId, memberKey)).willReturn(foodSlice);
         //when
-        SliceObject<Food> results = foodManager.findFoodList(cursorable,categoryId,lastCreatedAt,memberKey);
+        SliceObject<Food> results = foodManager.findFoodList(cursorable, categoryId, memberKey);
         //then
-        assertThat(results.getContent()).hasSize(2);
-        assertThat(results.getContent().getFirst().name()).isEqualTo(FoodFixture.NAME);
-        assertThat(results.getContent().get(0)).isInstanceOf(Food.class);
+        assertThat(results.content()).hasSize(2);
+        assertThat(results.content().getFirst().name()).isEqualTo(FoodFixture.NAME);
+        assertThat(results.content().getFirst()).isInstanceOf(Food.class);
     }
 
     @Test
     @DisplayName("식재료 단일 조회 시 식재료 세부정보 반환")
-    void findFoodById_SUCCESS() throws Exception {
+    void findFoodById_SUCCESS() {
         //given
         Long foodId = FoodFixture.ID;
         String memberKey = FoodFixture.MEMBER_KEY;
@@ -88,7 +89,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("선택된 식재료들의 이름 조회 시 이름 리스트 반환")
-    void findFoodNames_SUCCESS() throws Exception {
+    void findFoodNames_SUCCESS() {
         //given
         String memberKey = FoodFixture.MEMBER_KEY;
         FoodEntity entity1 = FoodFixture.createFoodEntity(1L);
@@ -103,7 +104,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 삭제")
-    void removeFood_SUCCESS() throws Exception {
+    void removeFood_SUCCESS() {
         //given
         Food food = FoodFixture.createFood(1L);
         //when
